fix content width overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,7 +40,10 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
-
+// fix content width overflow
+h1, h2, h3, h4, h5, h6, p {
+    word-wrap: break-word;
+}
 
 /**
  * Images
